[FIX] Bad text/background contrast in top row of trackerlist table. Reported in tiki.org forums.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/12.x@53791 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/greenvalley.css
+++ b/styles/greenvalley.css
@@ -608,8 +608,9 @@ h3.box-title .moduletitle em {
 	margin-bottom: 10px;
 }
 
-table.normal tr:first-child {
-    background: #004C1A !important;
+/*table.normal tr:first-child*/
+table.normal th {
+    background: #004C1A;
 }
 
 table.normal tr:nth-child(2n+1) {
